--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -7,6 +7,47 @@
     url = {https://www.R-project.org/},
   }
   
+@Manual{readr,
+    title = {readr: Read Rectangular Text Data},
+    author = {Hadley Wickham and Jim Hester and Romain Francois},
+    year = {2018},
+    note = {R package version 1.3.1},
+    url = {https://CRAN.R-project.org/package=readr},
+  }
+
+@Manual{tidybayes,
+    title = {{tidybayes}: Tidy Data and Geoms for {Bayesian} Models},
+    author = {Matthew Kay},
+    year = {2020},
+    note = {R package version 2.1.1},
+    url = {http://mjskay.github.io/tidybayes/},
+    doi = {10.5281/zenodo.1308151},
+  }
+  
+@Book{gg,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+
+@Manual{for,
+    title = {forcats: Tools for Working with Categorical Variables (Factors)},
+    author = {Hadley Wickham},
+    year = {2020},
+    note = {R package version 0.5.0},
+    url = {https://CRAN.R-project.org/package=forcats},
+  }
+  
+@Manual{ggpub,
+    title = {ggpubr: 'ggplot2' Based Publication Ready Plots},
+    author = {Alboukadel Kassambara},
+    year = {2020},
+    note = {R package version 0.4.0},
+    url = {https://CRAN.R-project.org/package=ggpubr},
+  }
   
 @Article{tydr,
     title = {Welcome to the {tidyverse}},
@@ -110,4 +151,49 @@
     pages = {395--411},
     doi = {10.32614/RJ-2018-017},
     encoding = {UTF-8},
+  }
+  
+@article{mental,
+  title={Mental health and academic success in college},
+  author={Eisenberg, Daniel and Golberstein, Ezra and Hunt, Justin B},
+  journal={The BE Journal of Economic Analysis \& Policy},
+  volume={9},
+  number={1},
+  year={2009},
+  publisher={De Gruyter}
+  }
+
+@inproceedings{femalegit,
+  author = {Wang, Zhendong and Wang, Yi and Redmiles, David},
+  title = {Competence-Confidence Gap: A Threat to Female Developers' Contribution on Github},
+  year = {2018},
+  isbn = {9781450356619},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3183428.3183437},
+  doi = {10.1145/3183428.3183437},
+  booktitle = {Proceedings of the 40th International Conference on Software Engineering: Software Engineering in Society},
+  pages = {81–90},
+  numpages = {10},
+  keywords = {granger causality, female developers, github, competence-confidence gap},
+  location = {Gothenburg, Sweden},
+  series = {ICSE-SEIS '18}
+  }
+  
+@Manual{crmd1,
+    title = {rmarkdown: Dynamic Documents for R},
+    author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+    year = {2020},
+    note = {R package version 2.3},
+    url = {https://github.com/rstudio/rmarkdown},
+  }
+  
+@Book{crmd2,
+    title = {R Markdown: The Definitive Guide},
+    author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+    publisher = {Chapman and Hall/CRC},
+    address = {Boca Raton, Florida},
+    year = {2018},
+    note = {ISBN 9781138359338},
+    url = {https://bookdown.org/yihui/rmarkdown},
   }
